static/css/base.css
/* fonts */
@import url('https://fonts.googleapis.com/css2?family=Palanquin:wght@100;200;300;400;500;600;700&display=swap');

/* base css rules */
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Palanquin', sans-serif;
    font-weight: 700;
}

.footer {
    border-top: 1px solid rgba(224, 217, 217, 0.521);
    padding-top: 1rem;
    margin-top: auto;
}

/* sticky footer */
html,
body {
    height: 100%;
    margin: 0;
}

.content {
    height: 95%;
    display: flex;
    flex-direction: column;
}

/* home */
.home-image-md {
    background-image: url('/media/homepage.jpg');
    background-size: cover;
}

#shoop-title {
    font-family: 'Palanquin', sans-serif;
    font-weight: 700;
    color: #0275d8;
}

.btn-user {
    margin-left: 1rem;
    color: #0275d8;
    border: none;
}

.btn-cart {
    margin-left: 1rem;
    margin-right: 1rem;
    color: #0275d8;
}

/* messages */
.messages-container {
    position: fixed;
    font-size: 1rem;
    bottom: 20px;
    right: 20px;
    z-index: 99999999999;
}

/* browse */
.btn-shoe-detail {
    padding: .25rem .5rem .25rem .5rem;
}

.box-ratings {
    height: 1.5rem;
}

.refine-search {
    background-color: #f7f7f7;
    border-radius: .25rem;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.small-font {
    font-size: .8rem;
}

/* detail */
.rounded-element {
    border: 1px solid grey;
    border-radius: .25rem;
}

/* cart */
.shoe-image-preview {
    width: 3rem;
}

.cart-table-header {
    font-family: 'Palanquin', sans-serif;
    font-weight: 700;
}

/* utility classes */
.black-outline {
    border: 1px solid black;
}

.header-sm-small {
    font-size: .9rem;
}

.text-sm-small {
    font-size: .7rem;
}

@media screen and (min-width: 576px) {
    .header-sm-small {
        font-size: 1rem;
    }

    .text-sm-small {
        font-size: 1rem;
    }

    .shoe-image-preview {
        width: 8rem;
    }

}

@media screen and (min-width: 992px) {
    .home-image-md {
        background-image: none;
    }

    .home-image-lg {
        background-image: url('/media/homepage.jpg');
        background-size: cover;
    }

    .refine-search {
        max-width: 60%;
        margin-left: auto;
        margin-right: auto;
    }
}

